--- a/张晓宇个人网页1/index.html
+++ b/张晓宇个人网页1/index.html
@@ -358,13 +358,13 @@ $(function(){
 		</li>
 		<li>
 			<div class="tc_front">
-				<a href="" target="_blank">
+				<a href="778852.github.io/贪吃蛇/snack.html" target="_blank">
 					<img src="images/she.png" alt="">
 				</a>
 			</div>
 			<div class="tc_back"></div>
 
-			<div id="778852.github.io/贪吃蛇/snack.html" class="tip">
+			<div id="tip1" class="tip">
 				<div class="tc_front">
 					<p>贪吃蛇</p>
 				</div>
