--- a/装修/index.html
+++ b/装修/index.html
@@ -26,27 +26,27 @@
 	<div class="banner-top">
 		<div class="banner-box">
 			<div class="box-left">
-				<a href="#">家装快速报价</a>
+				<a href="">家装快速报价</a>
 			</div>
 			<ul class="box-right">
 				<li></li>
 				<li>
-					<a href="index.html">首页</a>
+					<a href="778852/778852.github.io/专修/index.html" target="_blank">首页</a>
 				</li>
 				<li>
-					<a href="index5.html">关于我们</a>
+					<a href="778852/778852.github.io/专修/index5.html" target="_blank">关于我们</a>
 				</li>
 				<li>
-					<a href="index2.html">装修风格</a>
+					<a href="778852/778852.github.io/专修/index2.html" target="_blank">装修风格</a>
 				</li>
 				<li>
-					<a href="index3.html">新闻中心</a>
+					<a href="778852/778852.github.io/专修/index3.html" target="_blank">新闻中心</a>
 				</li>
 				<li>
-					<a href="index4.html">案例展示</a>
+					<a href="778852/778852.github.io/专修/index4.html" target="_blank">案例展示</a>
 				</li>
 				<li>
-					<a href="index5.html">联系我们</a>
+					<a href="778852/778852.github.io/专修/index2.html" target="_blank">联系我们</a>
 				</li>
 			</ul>
 		</div>
