--- a/张晓宇个人网页1/index.html
+++ b/张晓宇个人网页1/index.html
@@ -324,7 +324,7 @@ $(function(){
 	<ul class="tips">
 		<li>
 			<div class="tc_front">
-				<a href="778852.github.io/xiaomi/index.html" target="_blank">
+				<a href="xiaomi/index.html" target="_blank">
 					<img src="images/4.png" alt="">
 				</a>
 			</div>
@@ -342,7 +342,7 @@ $(function(){
 		</li>
 		<li>
 			<div class="tc_front">
-				<a href="778852.github.io/tianmao/tianmao.html" target="_blank">
+				<a href="tianmao/tianmao.html" target="_blank">
 					<img src="images/tianmao.png" alt="">
 				</a>
 			</div>
@@ -358,7 +358,7 @@ $(function(){
 		</li>
 		<li>
 			<div class="tc_front">
-				<a href="778852.github.io/贪吃蛇/snack.html" target="_blank">
+				<a href="贪吃蛇/snack.html" target="_blank">
 					<img src="images/she.png" alt="">
 				</a>
 			</div>
@@ -375,7 +375,7 @@ $(function(){
 		</li>
 		<li>
 			<div class="tc_front">
-				<a href="778852.github.io/打字游戏/打字游戏.html" target="_blank">
+				<a href="打字游戏/打字游戏.html" target="_blank">
 					<img src="images/dazi%20.png" alt="">
 				</a>
 			</div>
@@ -394,7 +394,7 @@ $(function(){
 		</li>
 		<li>
 			<div class="tc_front">
-				<a href="778852.github.io/weather/weather1.html" target="_blank">
+				<a href="weather/weather1.html" target="_blank">
 					<img src="images/weather.png" alt="">
 				</a>
 			</div>
@@ -412,7 +412,7 @@ $(function(){
 		</li>
 		<li>
 			<div class="tc_front">
-				<a href="778852.github.io/便签/TODOlist.html" target="_blank">
+				<a href="便签/TODOlist.html" target="_blank">
 					<img src="images/todolist.png" alt="">
 				</a>
 			</div>
@@ -429,7 +429,7 @@ $(function(){
 		</li>
 		<li>
 			<div class="tc_front">
-				<a href="778852.github.io/移动端便签/todolistyd.html" target="_blank">
+				<a href="移动端便签/todolistyd.html" target="_blank">
 					<img src="images/todolist.png" alt="">
 				</a>
 			</div>
@@ -447,7 +447,7 @@ $(function(){
 		</li>
 		<li>
 			<div class="tc_front">
-				<a href="778852.github.io/装修/index.html" target="_blank">
+				<a href="装修/index.html" target="_blank">
 					<img src="images/qiye.png" alt="">
 				</a>
 			</div>
