--- a/移动端便签/todolistyd.html
+++ b/移动端便签/todolistyd.html
@@ -23,13 +23,13 @@
        <div class="box">
            <div class="left">
                 <div class="kuai" id="xuan">
-                    <h3>添加提醒</h3>
+                    <h3>添加事件</h3>
                 </div>
                <div class="kuai">
-                   <h4>已完成</h4>
+                   <h4>已完成事件</h4>
                </div>
                <div class="kuai">
-                   <h4>未完成</h4>
+                   <h4>未完成事件</h4>
                </div>
            </div>
            <div class="right">
