--- a/装修/index4.html
+++ b/装修/index4.html
@@ -32,22 +32,22 @@
 			<ul class="box-right">
 				<li></li>
 				<li>
-					<a href="装修/index.html" target="_blank">首页</a>
+					<a href="index.html" target="_blank">首页</a>
 				</li>
 				<li>
-					<a href="装修/index5.html" target="_blank">关于我们</a>
+					<a href="index5.html" target="_blank">关于我们</a>
 				</li>
 				<li>
-					<a href="装修/index2.html" target="_blank">装修风格</a>
+					<a href="index2.html" target="_blank">装修风格</a>
 				</li>
 				<li>
-					<a href="装修/index3.html" target="_blank">新闻中心</a>
+					<a href="index3.html" target="_blank">新闻中心</a>
 				</li>
 				<li>
-					<a href="装修/index4.html" target="_blank">案例展示</a>
+					<a href="index4.html" target="_blank">案例展示</a>
 				</li>
 				<li>
-					<a href="装修/index2.html" target="_blank">联系我们</a>
+					<a href="index2.html" target="_blank">联系我们</a>
 				</li>
 			</ul>
 		</div>
