--- a/张晓宇个人网页1/index.html
+++ b/张晓宇个人网页1/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
 <meta charset="utf-8">
-<title>fullPage.js制作网易邮箱6.0介绍页面演示_dowebok</title>
+<title>个人网页</title>
 	<link rel="stylesheet" href="css/jquery.fullPage.css">
 	<link rel="stylesheet" href="css/index.css">
 	<link rel="stylesheet" href="css/tip_cards.css">
