--- a/张晓宇个人网页1/index.html
+++ b/张晓宇个人网页1/index.html
@@ -324,7 +324,7 @@ $(function(){
 	<ul class="tips">
 		<li>
 			<div class="tc_front">
-				<a href="../移动端便签xiaomi1/index.html" target="_blank">
+				<a href="../移动端便签/xiaomi1/index.html" target="_blank">
 					<img src="images/4.png" alt="">
 				</a>
 			</div>
